--- a/Copia/style.css
+++ b/Copia/style.css
@@ -262,6 +262,9 @@ main {
 
 /* Second section */
 .main-product-detail {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: relative;
     width: 100%;
     min-width: 320px;
@@ -275,6 +278,30 @@ main {
     width: 40px;
     height: 25px;
     top: -10px;
-    left: calc(50%-20px);
     background-image: url("Assets/icons/batata.svg");
+}
+
+.product-detail--title {
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 50px;
+    text-align: center;
+}
+
+.product-detail--title h2 {
+    margin-bottom: 20px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+
+.product-detail--title p {
+    margin-bottom: 20px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
 }
