--- a/Copia/style.css
+++ b/Copia/style.css
@@ -299,9 +299,58 @@ main {
 }
 
 .product-detail--title p {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     font-size: 1.4rem;
     font-weight: 500;
     line-height: 1.8rem;
     color: #808080;
+}
+
+.product-detail--card {
+    width: 90%;
+    min-width: 288px;
+    max-width: 400px;
+    height: 150px;
+    margin: 10px auto;
+    padding: 15px;
+    background-color: var(--black);
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
+}
+
+.product-detail--card .icon-card {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 5px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.product-card-title {
+    margin-bottom: 15px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--just-white);
+}
+
+.product-card-body {
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
+}
+
+.clock {
+    background-image: url("Assets/icons/clock.svg");
+}
+
+.eye {
+    background-image: url("Assets/icons/eye.svg");
+}
+
+.cash {
+    background-image: url("Assets/icons/dollar-sign.svg");
 }
