--- a/Copia/style.css
+++ b/Copia/style.css
@@ -310,7 +310,7 @@ main {
     width: 90%;
     min-width: 288px;
     max-width: 400px;
-    height: 150px;
+    min-height: 150px;
     margin: 10px auto;
     padding: 15px;
     background-color: var(--black);
@@ -353,4 +353,27 @@ main {
 
 .cash {
     background-image: url("Assets/icons/dollar-sign.svg");
+}
+
+.check {
+    background-image: url("Assets/icons/check-circle.svg");
+}
+
+.bitcoin-img-container {
+    width: 100%;
+    min-width: 320px;
+    min-height: 40vh;
+    background-image: url("Assets/img/bitcoinbaby2x.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+}
+
+.bitcoin-img-container {
+    padding-top: 60px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
 }
