--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
-:root { /*Colors*/
-    --bitcoin-orange: #F7931a;
-    --soft-orange: #FFE9D5;
+:root {
+    /*Colors*/
+    --bitcoin-orange: #f7931a;
+    --soft-orange: #ffe9d5;
     --secondary-blue: #1a9af7;
     --soft-blue: #e7f5ff;
     --warm-black: #201e1c;
     --black: #282623;
-    --grey: #bababa;
+    --grey: #848282;
     --off-white: #faf8f7;
     --just-white: #fff;
 }
@@ -18,7 +19,7 @@
 
 html {
     font-size: 62.5%;
-    font-family: 'DM Sans', sans-serif; /* Basic Font */
+    font-family: "DM Sans", sans-serif; /* Basic Font */
 }
 
 /* Header Structure */
@@ -31,14 +32,18 @@ header {
     min-width: 320px;
     height: 334px;
     text-align: center;
-    background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);;
+    background: linear-gradient(207.8deg, #201e1c 16.69%, #f7931a 100%);
 }
 
-header img{
+li {
+    list-style: none;
+}
+
+header img {
     width: 150px;
     height: 24px;
     margin-top: 60px;
-    align-self: center; 
+    align-self: center;
 }
 
 .header--tittle-container {
@@ -63,7 +68,7 @@ header img{
     font-size: 1.4rem;
     font-weight: 500;
     line-height: 1.8rem;
-    color:  var(--soft-orange);
+    color: var(--soft-orange);
 }
 
 .header--button {
@@ -90,9 +95,8 @@ header img{
     width: 13px;
     height: 8px;
     margin-left: 15px;
-    background-image: url('./Assets/icons/down-arrow.svg');
+    background-image: url("./Assets/icons/down-arrow.svg");
 }
-
 
 /* Main */
 main {
@@ -114,7 +118,7 @@ main {
     height: 200px;
     margin: 0 auto;
     margin-bottom: 50px;
-    background-image: url('Assets/img/Bitcoin.svg');
+    background-image: url("Assets/img/Bitcoin.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -125,7 +129,7 @@ main {
     font-size: 2.4rem;
     font-weight: bold;
     line-height: 2.6rem;
-    color:  var(--black);
+    color: var(--black);
 }
 
 .main-exchange-container p {
@@ -152,7 +156,8 @@ main {
     font-family: "Inter", sans-serif;
 }
 
-.main-currency-table .currency-table--title {
+.main-currency-table .currency-table--title,
+.main-Commissions-table .currency-table--title {
     margin-bottom: 15px;
     font-size: 1.8rem;
     font-weight: bold;
@@ -160,7 +165,14 @@ main {
     color: var(--bitcoin-orange);
 }
 
+.main-Commissions-table .currency-table--title {
+    color: var(--secondary-blue);
+}
+
 .currency-table--container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
     width: 90%;
     min-width: 230px;
     max-width: 300px;
@@ -168,16 +180,329 @@ main {
     margin: 0 auto;
 }
 
-.currency-table--container table {
+.currency-table--container li {
     width: 100%;
-    height: 100%;
-}
-
-.currency-table--container td {
-    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 1.6rem;
     font-weight: 500;
     line-height: 1.9rem;
     color: var(--grey);
     background-color: var(--just-white);
+}
+
+.table-top-left {
+    border-radius: 15px 0 0 0;
+}
+
+.table-top-right {
+    border-radius: 0 15px 0 0;
+}
+
+.table-bottom-left {
+    border-radius: 0 0 0 15px;
+}
+
+.table-bottom-right {
+    border-radius: 0 0 15px 0;
+}
+
+.currency-table--container .table__item-right {
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.7rem;
+    color: #757575;
+}
+
+.currency-table--container .down {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+    background-image: url("Assets/icons/trending-down.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.currency-table--container .up {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+    background-image: url("Assets/icons/trending-up.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.currency-table--date,
+.main-Commissions-table .commissions-table--date {
+    width: 190px;
+    height: 30px;
+    margin: 0 auto;
+    margin-top: 20px;
+    font-weight: 300;
+    padding: 8px;
+    background-color: var(--soft-orange);
+    border-radius: 10px;
+}
+
+.main-Commissions-table .commissions-table--date {
+    background-color: var(--soft-blue);
+}
+
+.currency-table--date p,
+.commissions-table--date p {
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    color: var(--warm-black);
+}
+
+/* Second section */
+.main-product-detail {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    min-width: 320px;
+    height: auto;
+    padding: 20px 10px;
+    background-color: var(--warm-black);
+}
+
+.product-detail-batata-logo {
+    position: absolute;
+    width: 40px;
+    height: 25px;
+    top: -10px;
+    background-image: url("Assets/icons/batata.svg");
+}
+
+.product-detail--title {
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 50px;
+    text-align: center;
+}
+
+.product-detail--title h2 {
+    margin-bottom: 20px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+
+.product-detail--title p {
+    margin-bottom: 15px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
+}
+
+.product-detail--card {
+    width: 90%;
+    min-width: 288px;
+    max-width: 400px;
+    min-height: 150px;
+    margin: 10px auto;
+    padding: 15px;
+    background-color: var(--black);
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
+}
+
+.product-detail--card .icon-card {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 5px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.product-card-title {
+    margin-bottom: 15px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--just-white);
+}
+
+.product-card-body {
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
+}
+
+.clock {
+    background-image: url("Assets/icons/clock.svg");
+}
+
+.eye {
+    background-image: url("Assets/icons/eye.svg");
+}
+
+.cash {
+    background-image: url("Assets/icons/dollar-sign.svg");
+}
+
+.check {
+    background-image: url("Assets/icons/check-circle.svg");
+}
+
+.bitcoin-img-container {
+    width: 100%;
+    min-width: 320px;
+    min-height: 40vh;
+    background-image: url("Assets/img/bitcoinbaby2x.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+}
+
+.bitcoin-img-container {
+    padding-top: 60px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+
+.main-plans-container {
+    width: 100%;
+    min-width: 320px;
+    padding-bottom: 70px;
+    text-align: center;
+}
+
+.plans-title {
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+    margin-bottom: px;
+}
+
+.plans-title h2 {
+    padding-top: 50px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--black);
+}
+
+.plans-title p {
+    padding-top: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #757575;
+}
+
+.plans-container-slider {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    height: 316px;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+}
+
+.plans-container-slider::-webkit-scrollbar {
+    background-color: var(--soft-orange);
+    height: 3px;
+}
+.plans-container-slider::-webkit-scrollbar-thumb {
+    background-color: var(--bitcoin-orange);
+}
+
+.plans-container-card {
+    position: relative;
+    scroll-snap-align: center;
+    width: 50%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 50px auto 0;
+    padding: 0 5px;
+    background-color: var(--just-white);
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(89, 73, 30, 0.15);
+}
+
+.Recommended {
+    position: absolute;
+    width: 120px;
+    height: 31px;
+    left: calc(50% - 60px);
+    top: -15px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    padding: 6px;
+    background-color: var(--bitcoin-orange);
+    color: var(--just-white);
+    border-radius: 8px;
+}
+
+.plan-card-title {
+    padding-top: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 2rem;
+    color: black;
+}
+
+.plan-card-price {
+    padding: 5px 0;
+    font-size: 5.3rem;
+    font-weight: bold;
+    line-height: 6.3rem;
+    color: black;
+}
+
+.plan-card-price sup {
+    font-size: 1.4rem;
+    font-weight: 300;
+    vertical-align: 2.4rem;
+    margin-right: 5px;
+}
+
+.plan-card-saving {
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+    color: #757575;
+}
+
+.plan-card-action {
+    width: 150px;
+    height: 48px;
+    margin-top: 20px;
+    background-color: var(--just-white);
+    border: 2px solid var(--bitcoin-orange);
+    border-radius: 4px;
+    font-family: "DM Sans", sans-serif;
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--black);
+    cursor: pointer;
+}
+
+.plan-card-action span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url("Assets/icons/orange-right-arrow.svg");
+    vertical-align: text-bottom;
 }
