--- a/styles.css
+++ b/styles.css
@@ -381,7 +381,8 @@ main {
 .main-plans-container {
     width: 100%;
     min-width: 320px;
-    padding-bottom: 70px;
+    padding: 20px;
+    padding-bottom: 20px;
     text-align: center;
 }
 
@@ -414,6 +415,7 @@ main {
     align-items: center;
     gap: 10px;
     height: 316px;
+    margin: 0 20px;
     overflow-x: scroll;
     overscroll-behavior-x: contain;
     scroll-snap-type: x proximity;
@@ -505,4 +507,33 @@ main {
     height: 20px;
     background-image: url("Assets/icons/orange-right-arrow.svg");
     vertical-align: text-bottom;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 150px;
+    padding-left: 10px;
+    background-color: var(--bitcoin-orange);
+}
+
+.footer__left a:hover {
+    text-decoration: underline;
+}
+
+footer .left ul {
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    list-style: none;
+}
+
+.left li {
+    margin: 10px 0;
+}
+.left a {
+    text-decoration: none;
+    color: var(--just-white);
 }
